--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -177,6 +177,7 @@ allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.186.73;
 allow 172.104.243.155;
+allow 172.104.248.232;
 allow 172.105.161.162;
 allow 172.234.228.174;
 allow 172.81.131.110;
@@ -269,6 +270,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -500,6 +502,7 @@ allow 185.40.4.29;
 allow 185.40.4.38;
 allow 185.40.4.44;
 allow 185.40.4.64;
+allow 185.40.4.84;
 allow 185.40.4.92;
 allow 185.40.4.94;
 allow 185.40.4.95;
@@ -637,7 +640,6 @@ allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.58.107.53;
-allow 198.96.155.3;
 allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
@@ -865,7 +867,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -1077,6 +1078,7 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:6d42:1242:2b92::1;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:239:2be:1400::1;
@@ -1086,6 +1088,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
@@ -1388,6 +1391,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
+allow 2a0e:4005:1002:ffff:185:40:4:84;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
@@ -1541,6 +1545,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1660,6 +1665,7 @@ allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 85.17.9.83;
+allow 85.235.144.146;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 87.106.78.113;
