--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -864,7 +864,6 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
-allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1160,6 +1159,7 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1541,6 +1541,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1575,6 +1576,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1652,6 +1654,7 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
