--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -14,7 +14,6 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
-allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -117,6 +116,7 @@ allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.105.130.159;
+allow 141.105.130.166;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -190,7 +190,6 @@ allow 173.249.57.253;
 allow 173.255.198.243;
 allow 174.172.203.167;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.113.53;
@@ -272,7 +271,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.168.22.85;
@@ -617,6 +615,8 @@ allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
+allow 194.163.172.134;
+allow 194.163.173.25;
 allow 194.26.192.161;
 allow 194.26.192.72;
 allow 194.26.192.77;
@@ -869,7 +869,6 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -913,7 +912,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1085,6 +1083,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:2b92::1;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:239:2be:1400::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1376,6 +1375,7 @@ allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:b641:6f0:13c::2;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1580,7 +1580,6 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1630,7 +1629,6 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
@@ -1666,6 +1664,7 @@ allow 85.17.9.83;
 allow 85.235.144.146;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 87.106.78.113;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
