--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -188,7 +188,6 @@ deny 172.81.132.94;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
-deny 174.172.203.167;
 deny 176.118.193.33;
 deny 176.58.100.98;
 deny 176.58.121.177;
@@ -869,8 +868,8 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
+deny 23.154.177.12;
 deny 23.154.177.13;
-deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -912,11 +911,11 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
-deny 2601:14d:4b01:1dec::a70;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
@@ -1083,7 +1082,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:6d42:1242:2b92::1;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
-deny 2a01:239:2be:1400::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1396,6 +1394,8 @@ deny 2a0e:4005:1002:ffff:185:40:4:84;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
+deny 2a0e:97c0:3ea:533::1;
+deny 2a0e:97c0:3ea:537::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
@@ -1496,6 +1496,8 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.70.101;
+deny 45.137.70.106;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1629,6 +1631,7 @@ deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
+deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 74.82.47.194;
@@ -1664,7 +1667,6 @@ deny 85.17.9.83;
 deny 85.235.144.146;
 deny 85.239.41.130;
 deny 85.93.218.204;
-deny 87.106.78.113;
 deny 87.118.110.27;
 deny 87.118.116.103;
 deny 87.118.116.12;
