Update lists at 20241215-0000

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -115,8 +115,6 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
-deny 141.105.130.159;
-deny 141.105.130.166;
 deny 141.98.11.62;
 deny 142.171.12.88;
 deny 142.44.133.81;
@@ -581,7 +579,6 @@ deny 192.42.116.28;
 deny 192.99.149.111;
 deny 193.105.134.150;
 deny 193.105.134.155;
-deny 193.187.90.106;
 deny 193.189.100.194;
 deny 193.189.100.195;
 deny 193.189.100.196;
@@ -868,8 +865,8 @@ deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
-deny 23.154.177.12;
 deny 23.154.177.13;
+deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -911,7 +908,6 @@ deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -1082,6 +1078,7 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:6d42:1242:2b92::1;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
+deny 2a01:239:2be:1400::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1373,7 +1370,6 @@ deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
-deny 2a0c:b641:6f0:13c::2;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1627,17 +1623,16 @@ deny 64.190.76.2;
 deny 65.87.7.42;
 deny 66.146.193.33;
 deny 66.220.242.222;
+deny 66.78.40.118;
 deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 74.82.47.194;
 deny 77.220.196.253;
 deny 77.37.3.7;
-deny 77.48.28.236;
 deny 77.48.28.237;
 deny 77.48.28.239;
 deny 77.81.247.72;
@@ -1667,6 +1662,7 @@ deny 85.17.9.83;
 deny 85.235.144.146;
 deny 85.239.41.130;
 deny 85.93.218.204;
+deny 87.106.78.113;
 deny 87.118.110.27;
 deny 87.118.116.103;
 deny 87.118.116.12;
