--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -115,8 +115,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.105.130.159;
-allow 141.105.130.166;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -581,7 +579,6 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.187.90.106;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -868,8 +865,8 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
-allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -911,7 +908,6 @@ allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1082,6 +1078,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:2b92::1;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:239:2be:1400::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1373,7 +1370,6 @@ allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
-allow 2a0c:b641:6f0:13c::2;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1627,17 +1623,16 @@ allow 64.190.76.2;
 allow 65.87.7.42;
 allow 66.146.193.33;
 allow 66.220.242.222;
+allow 66.78.40.118;
 allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
-allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.220.196.253;
 allow 77.37.3.7;
-allow 77.48.28.236;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
@@ -1667,6 +1662,7 @@ allow 85.17.9.83;
 allow 85.235.144.146;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 87.106.78.113;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
