--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -269,6 +269,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
@@ -688,6 +689,7 @@ set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
+set_real_ip_from 209.141.58.208;
 set_real_ip_from 209.141.60.219;
 set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
@@ -818,6 +820,7 @@ set_real_ip_from 45.137.70.101;
 set_real_ip_from 45.137.70.106;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.160;
 set_real_ip_from 45.138.16.178;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -986,6 +989,7 @@ set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.235.144.146;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
+set_real_ip_from 87.106.78.113;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.12;
