--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -267,7 +267,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
@@ -1473,6 +1472,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:23;
 set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
+set_real_ip_from 2a12:de40:21:701b::;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
@@ -1528,6 +1528,7 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
+set_real_ip_from 45.147.7.186;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.149.204.78;
