Update lists at 20241216-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -188,6 +188,7 @@ allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.113.53;
@@ -219,6 +220,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.55.88.199;
+allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -266,7 +268,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.168.22.85;
@@ -292,22 +293,6 @@ allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.219.82.176;
-allow 185.220.100.240;
-allow 185.220.100.241;
-allow 185.220.100.242;
-allow 185.220.100.243;
-allow 185.220.100.244;
-allow 185.220.100.245;
-allow 185.220.100.246;
-allow 185.220.100.247;
-allow 185.220.100.248;
-allow 185.220.100.249;
-allow 185.220.100.250;
-allow 185.220.100.251;
-allow 185.220.100.252;
-allow 185.220.100.253;
-allow 185.220.100.254;
-allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -1065,6 +1050,7 @@ allow 2620:18c:0:192::228;
 allow 2620:18c:0:192::229;
 allow 2620:18c:0:192::230;
 allow 2620:95:4007::111;
+allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
@@ -1081,7 +1067,6 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:6d42:1242:2b92::1;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
-allow 2a01:239:2be:1400::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1090,11 +1075,11 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4840:1:3::30;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1201,22 +1186,6 @@ allow 2a09:61c0::22;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
-allow 2a0b:f4c0:16c:10::1;
-allow 2a0b:f4c0:16c:1::1;
-allow 2a0b:f4c0:16c:11::1;
-allow 2a0b:f4c0:16c:12::1;
-allow 2a0b:f4c0:16c:13::1;
-allow 2a0b:f4c0:16c:14::1;
-allow 2a0b:f4c0:16c:15::1;
-allow 2a0b:f4c0:16c:16::1;
-allow 2a0b:f4c0:16c:2::1;
-allow 2a0b:f4c0:16c:3::1;
-allow 2a0b:f4c0:16c:4::1;
-allow 2a0b:f4c0:16c:5::1;
-allow 2a0b:f4c0:16c:6::1;
-allow 2a0b:f4c0:16c:7::1;
-allow 2a0b:f4c0:16c:8::1;
-allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1478,6 +1447,7 @@ allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
+allow 31.59.185.7;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.120.239.59;
@@ -1564,7 +1534,6 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1664,11 +1633,11 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.38.130.105;
 allow 85.17.9.83;
 allow 85.235.144.146;
 allow 85.239.41.130;
 allow 85.93.218.204;
-allow 87.106.78.113;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
