--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -188,6 +188,7 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.113.53;
@@ -219,6 +220,7 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.55.88.199;
+set_real_ip_from 180.150.226.99;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -266,7 +268,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
@@ -292,22 +293,6 @@ set_real_ip_from 185.195.71.9;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
 set_real_ip_from 185.219.82.176;
-set_real_ip_from 185.220.100.240;
-set_real_ip_from 185.220.100.241;
-set_real_ip_from 185.220.100.242;
-set_real_ip_from 185.220.100.243;
-set_real_ip_from 185.220.100.244;
-set_real_ip_from 185.220.100.245;
-set_real_ip_from 185.220.100.246;
-set_real_ip_from 185.220.100.247;
-set_real_ip_from 185.220.100.248;
-set_real_ip_from 185.220.100.249;
-set_real_ip_from 185.220.100.250;
-set_real_ip_from 185.220.100.251;
-set_real_ip_from 185.220.100.252;
-set_real_ip_from 185.220.100.253;
-set_real_ip_from 185.220.100.254;
-set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
@@ -1065,6 +1050,7 @@ set_real_ip_from 2620:18c:0:192::228;
 set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:18c:0:192::230;
 set_real_ip_from 2620:95:4007::111;
+set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
@@ -1081,7 +1067,6 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:6d42:1242:2b92::1;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
-set_real_ip_from 2a01:239:2be:1400::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1090,11 +1075,11 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe96:7671;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:4840:1:3::30;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1201,22 +1186,6 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:4140:6c6c::2;
-set_real_ip_from 2a0b:f4c0:16c:10::1;
-set_real_ip_from 2a0b:f4c0:16c:1::1;
-set_real_ip_from 2a0b:f4c0:16c:11::1;
-set_real_ip_from 2a0b:f4c0:16c:12::1;
-set_real_ip_from 2a0b:f4c0:16c:13::1;
-set_real_ip_from 2a0b:f4c0:16c:14::1;
-set_real_ip_from 2a0b:f4c0:16c:15::1;
-set_real_ip_from 2a0b:f4c0:16c:16::1;
-set_real_ip_from 2a0b:f4c0:16c:2::1;
-set_real_ip_from 2a0b:f4c0:16c:3::1;
-set_real_ip_from 2a0b:f4c0:16c:4::1;
-set_real_ip_from 2a0b:f4c0:16c:5::1;
-set_real_ip_from 2a0b:f4c0:16c:6::1;
-set_real_ip_from 2a0b:f4c0:16c:7::1;
-set_real_ip_from 2a0b:f4c0:16c:8::1;
-set_real_ip_from 2a0b:f4c0:16c:9::1;
 set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
@@ -1478,6 +1447,7 @@ set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
+set_real_ip_from 31.59.185.7;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.120.239.59;
@@ -1564,7 +1534,6 @@ set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
-set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 47.243.99.161;
@@ -1664,11 +1633,11 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
+set_real_ip_from 84.38.130.105;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.235.144.146;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
-set_real_ip_from 87.106.78.113;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.12;
