--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -114,6 +114,7 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.105.130.166;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -816,6 +817,7 @@ allow 45.138.16.160;
 allow 45.138.16.178;
 allow 45.138.16.222;
 allow 45.138.16.230;
+allow 45.138.16.239;
 allow 45.138.16.240;
 allow 45.138.16.42;
 allow 45.138.16.76;
@@ -851,6 +853,7 @@ allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
+allow 45.66.35.35;
 allow 45.78.44.215;
 allow 45.79.144.222;
 allow 45.80.158.205;
@@ -893,6 +896,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
