--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -573,6 +573,7 @@ deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
+deny 2a0c:b641:6f0:13c::2;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -643,6 +644,7 @@ deny 2a12:a800:2:1:45:138:16:160;
 deny 2a12:a800:2:1:45:138:16:178;
 deny 2a12:a800:2:1:45:138:16:222;
 deny 2a12:a800:2:1:45:138:16:230;
+deny 2a12:a800:2:1:45:138:16:239;
 deny 2a12:a800:2:1:45:138:16:240;
 deny 2a12:a800:2:1:45:138:16:42;
 deny 2a12:a800:2:1:45:138:16:76;
