--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -114,6 +114,7 @@ set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
+set_real_ip_from 141.105.130.166;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.133.81;
@@ -816,6 +817,7 @@ set_real_ip_from 45.138.16.160;
 set_real_ip_from 45.138.16.178;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
+set_real_ip_from 45.138.16.239;
 set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.76;
@@ -851,6 +853,7 @@ set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
 set_real_ip_from 45.66.35.22;
+set_real_ip_from 45.66.35.35;
 set_real_ip_from 45.78.44.215;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.205;
@@ -893,6 +896,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
