--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -755,6 +755,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:67c:e28:1::2;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
@@ -1536,6 +1537,7 @@ allow 5.61.51.143;
 allow 5.79.66.19;
 allow 62.171.137.169;
 allow 62.182.84.146;
+allow 64.190.76.2;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
