Update lists at 20241218-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -324,33 +324,54 @@ allow 185.220.101.109;
 allow 185.220.101.11;
 allow 185.220.101.110;
 allow 185.220.101.12;
+allow 185.220.101.128;
 allow 185.220.101.129;
 allow 185.220.101.13;
 allow 185.220.101.130;
 allow 185.220.101.131;
+allow 185.220.101.132;
+allow 185.220.101.133;
 allow 185.220.101.134;
 allow 185.220.101.135;
 allow 185.220.101.136;
+allow 185.220.101.137;
+allow 185.220.101.138;
+allow 185.220.101.139;
 allow 185.220.101.14;
+allow 185.220.101.140;
+allow 185.220.101.141;
 allow 185.220.101.142;
+allow 185.220.101.143;
+allow 185.220.101.144;
 allow 185.220.101.145;
+allow 185.220.101.146;
 allow 185.220.101.147;
+allow 185.220.101.148;
 allow 185.220.101.149;
 allow 185.220.101.15;
+allow 185.220.101.150;
 allow 185.220.101.151;
+allow 185.220.101.153;
 allow 185.220.101.154;
 allow 185.220.101.155;
 allow 185.220.101.156;
+allow 185.220.101.157;
 allow 185.220.101.158;
+allow 185.220.101.159;
 allow 185.220.101.16;
+allow 185.220.101.160;
 allow 185.220.101.161;
 allow 185.220.101.162;
 allow 185.220.101.163;
 allow 185.220.101.164;
+allow 185.220.101.165;
+allow 185.220.101.166;
+allow 185.220.101.167;
 allow 185.220.101.168;
 allow 185.220.101.169;
 allow 185.220.101.17;
 allow 185.220.101.170;
+allow 185.220.101.171;
 allow 185.220.101.172;
 allow 185.220.101.173;
 allow 185.220.101.174;
@@ -359,8 +380,13 @@ allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.179;
 allow 185.220.101.18;
+allow 185.220.101.180;
+allow 185.220.101.181;
 allow 185.220.101.182;
 allow 185.220.101.183;
+allow 185.220.101.184;
+allow 185.220.101.185;
+allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
 allow 185.220.101.189;
@@ -817,6 +843,7 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
+allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1130,26 +1157,47 @@ allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
 allow 2a0b:f4c2::11;
+allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
+allow 2a0b:f4c2:1::132;
+allow 2a0b:f4c2:1::133;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
+allow 2a0b:f4c2:1::137;
+allow 2a0b:f4c2:1::138;
+allow 2a0b:f4c2:1::139;
+allow 2a0b:f4c2:1::140;
+allow 2a0b:f4c2:1::141;
 allow 2a0b:f4c2:1::142;
+allow 2a0b:f4c2:1::143;
+allow 2a0b:f4c2:1::144;
 allow 2a0b:f4c2:1::145;
+allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
+allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
+allow 2a0b:f4c2:1::150;
 allow 2a0b:f4c2:1::151;
+allow 2a0b:f4c2:1::153;
 allow 2a0b:f4c2:1::154;
 allow 2a0b:f4c2:1::155;
 allow 2a0b:f4c2:1::156;
+allow 2a0b:f4c2:1::157;
 allow 2a0b:f4c2:1::158;
+allow 2a0b:f4c2:1::159;
+allow 2a0b:f4c2:1::160;
 allow 2a0b:f4c2:1::161;
 allow 2a0b:f4c2:1::162;
 allow 2a0b:f4c2:1::163;
 allow 2a0b:f4c2:1::164;
+allow 2a0b:f4c2:1::165;
+allow 2a0b:f4c2:1::166;
+allow 2a0b:f4c2:1::167;
 allow 2a0b:f4c2:1::168;
 allow 2a0b:f4c2:1::169;
 allow 2a0b:f4c2:1::170;
+allow 2a0b:f4c2:1::171;
 allow 2a0b:f4c2:1::172;
 allow 2a0b:f4c2:1::173;
 allow 2a0b:f4c2:1::174;
@@ -1157,8 +1205,13 @@ allow 2a0b:f4c2:1::175;
 allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::179;
+allow 2a0b:f4c2:1::180;
+allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
+allow 2a0b:f4c2:1::184;
+allow 2a0b:f4c2:1::185;
+allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
@@ -1540,7 +1593,6 @@ allow 77.220.196.253;
 allow 77.37.3.7;
 allow 77.48.28.237;
 allow 77.48.28.239;
-allow 77.70.7.29;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 80.210.78.252;
