Update lists at 20241219-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -32,6 +32,7 @@ allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
+allow 107.172.31.218;
 allow 107.174.138.172;
 allow 107.174.146.25;
 allow 107.189.10.175;
@@ -111,10 +112,10 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 136.244.111.163;
+allow 137.184.197.55;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.105.130.166;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -267,6 +268,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.168.22.85;
@@ -324,7 +326,6 @@ allow 185.220.101.109;
 allow 185.220.101.11;
 allow 185.220.101.110;
 allow 185.220.101.12;
-allow 185.220.101.128;
 allow 185.220.101.129;
 allow 185.220.101.13;
 allow 185.220.101.130;
@@ -351,6 +352,7 @@ allow 185.220.101.149;
 allow 185.220.101.15;
 allow 185.220.101.150;
 allow 185.220.101.151;
+allow 185.220.101.152;
 allow 185.220.101.153;
 allow 185.220.101.154;
 allow 185.220.101.155;
@@ -376,12 +378,10 @@ allow 185.220.101.172;
 allow 185.220.101.173;
 allow 185.220.101.174;
 allow 185.220.101.175;
-allow 185.220.101.176;
 allow 185.220.101.177;
+allow 185.220.101.178;
 allow 185.220.101.179;
 allow 185.220.101.18;
-allow 185.220.101.180;
-allow 185.220.101.181;
 allow 185.220.101.182;
 allow 185.220.101.183;
 allow 185.220.101.184;
@@ -603,6 +603,7 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.187.90.106;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -654,6 +655,7 @@ allow 195.47.238.91;
 allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
+allow 195.88.74.206;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -843,7 +845,6 @@ allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
-allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -913,6 +914,7 @@ allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1157,7 +1159,6 @@ allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
 allow 2a0b:f4c2::11;
-allow 2a0b:f4c2:1::128;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::132;
@@ -1179,6 +1180,7 @@ allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::150;
 allow 2a0b:f4c2:1::151;
+allow 2a0b:f4c2:1::152;
 allow 2a0b:f4c2:1::153;
 allow 2a0b:f4c2:1::154;
 allow 2a0b:f4c2:1::155;
@@ -1202,11 +1204,9 @@ allow 2a0b:f4c2:1::172;
 allow 2a0b:f4c2:1::173;
 allow 2a0b:f4c2:1::174;
 allow 2a0b:f4c2:1::175;
-allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
+allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
-allow 2a0b:f4c2:1::180;
-allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
 allow 2a0b:f4c2:1::184;
@@ -1332,7 +1332,6 @@ allow 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 allow 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
-allow 2a0c:b641:6f0:13c::2;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
