--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -141,6 +141,7 @@ deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
+deny 2604:a880:400:d0::28:6001;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
@@ -384,7 +385,6 @@ deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
 deny 2a0b:f4c2::11;
-deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::132;
@@ -406,6 +406,7 @@ deny 2a0b:f4c2:1::148;
 deny 2a0b:f4c2:1::149;
 deny 2a0b:f4c2:1::150;
 deny 2a0b:f4c2:1::151;
+deny 2a0b:f4c2:1::152;
 deny 2a0b:f4c2:1::153;
 deny 2a0b:f4c2:1::154;
 deny 2a0b:f4c2:1::155;
@@ -429,11 +430,9 @@ deny 2a0b:f4c2:1::172;
 deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
 deny 2a0b:f4c2:1::175;
-deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
+deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
-deny 2a0b:f4c2:1::180;
-deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
 deny 2a0b:f4c2:1::184;
@@ -559,7 +558,6 @@ deny 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
-deny 2a0c:b641:6f0:13c::2;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
