--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -32,6 +32,7 @@ set_real_ip_from 104.244.78.233;
 set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
+set_real_ip_from 107.172.31.218;
 set_real_ip_from 107.174.138.172;
 set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.189.10.175;
@@ -111,10 +112,10 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 136.244.111.163;
+set_real_ip_from 137.184.197.55;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
-set_real_ip_from 141.105.130.166;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.133.81;
@@ -267,6 +268,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
@@ -324,7 +326,6 @@ set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
 set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
-set_real_ip_from 185.220.101.128;
 set_real_ip_from 185.220.101.129;
 set_real_ip_from 185.220.101.13;
 set_real_ip_from 185.220.101.130;
@@ -351,6 +352,7 @@ set_real_ip_from 185.220.101.149;
 set_real_ip_from 185.220.101.15;
 set_real_ip_from 185.220.101.150;
 set_real_ip_from 185.220.101.151;
+set_real_ip_from 185.220.101.152;
 set_real_ip_from 185.220.101.153;
 set_real_ip_from 185.220.101.154;
 set_real_ip_from 185.220.101.155;
@@ -376,12 +378,10 @@ set_real_ip_from 185.220.101.172;
 set_real_ip_from 185.220.101.173;
 set_real_ip_from 185.220.101.174;
 set_real_ip_from 185.220.101.175;
-set_real_ip_from 185.220.101.176;
 set_real_ip_from 185.220.101.177;
+set_real_ip_from 185.220.101.178;
 set_real_ip_from 185.220.101.179;
 set_real_ip_from 185.220.101.18;
-set_real_ip_from 185.220.101.180;
-set_real_ip_from 185.220.101.181;
 set_real_ip_from 185.220.101.182;
 set_real_ip_from 185.220.101.183;
 set_real_ip_from 185.220.101.184;
@@ -603,6 +603,7 @@ set_real_ip_from 192.42.116.28;
 set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
+set_real_ip_from 193.187.90.106;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -654,6 +655,7 @@ set_real_ip_from 195.47.238.91;
 set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
+set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -843,7 +845,6 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
 set_real_ip_from 23.154.177.10;
-set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
@@ -913,6 +914,7 @@ set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
+set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1157,7 +1159,6 @@ set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
 set_real_ip_from 2a0b:f4c2::11;
-set_real_ip_from 2a0b:f4c2:1::128;
 set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::132;
@@ -1179,6 +1180,7 @@ set_real_ip_from 2a0b:f4c2:1::148;
 set_real_ip_from 2a0b:f4c2:1::149;
 set_real_ip_from 2a0b:f4c2:1::150;
 set_real_ip_from 2a0b:f4c2:1::151;
+set_real_ip_from 2a0b:f4c2:1::152;
 set_real_ip_from 2a0b:f4c2:1::153;
 set_real_ip_from 2a0b:f4c2:1::154;
 set_real_ip_from 2a0b:f4c2:1::155;
@@ -1202,11 +1204,9 @@ set_real_ip_from 2a0b:f4c2:1::172;
 set_real_ip_from 2a0b:f4c2:1::173;
 set_real_ip_from 2a0b:f4c2:1::174;
 set_real_ip_from 2a0b:f4c2:1::175;
-set_real_ip_from 2a0b:f4c2:1::176;
 set_real_ip_from 2a0b:f4c2:1::177;
+set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
-set_real_ip_from 2a0b:f4c2:1::180;
-set_real_ip_from 2a0b:f4c2:1::181;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
 set_real_ip_from 2a0b:f4c2:1::184;
@@ -1332,7 +1332,6 @@ set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fee1:73d9;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
-set_real_ip_from 2a0c:b641:6f0:13c::2;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
