Update lists at 20241219-2100

--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -263,6 +263,7 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.132.53.12;
 set_real_ip_from 185.132.53.47;
 set_real_ip_from 185.132.53.52;
+set_real_ip_from 185.132.53.53;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.153.197.227;
@@ -733,6 +734,7 @@ set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
+set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
@@ -970,6 +972,7 @@ set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.80.20.86;
+set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
 set_real_ip_from 89.147.108.90;
