--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -231,6 +231,7 @@ set_real_ip_from 2620:18c:0:192::172;
 set_real_ip_from 2620:18c:0:192::173;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 2800:ba0:6:c1::4858;
+set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
