--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -769,6 +769,7 @@ allow 23.94.211.25;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
+allow 2.58.56.35;
 allow 2.58.56.43;
 allow 27.255.75.198;
 allow 31.129.22.65;
@@ -1031,6 +1032,7 @@ allow 94.232.43.221;
 allow 94.72.103.33;
 allow 94.72.98.8;
 allow 94.75.225.81;
+allow 95.116.121.207;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
