--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -362,6 +362,7 @@ allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
+allow 2a09:61c0::beef;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:4140:6c6c::2;
@@ -614,6 +615,7 @@ allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
+allow 2a12:a800:1:1:2:58:56:35;
 allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:202;
