--- a/deny-tor_ips_v4.conf
+++ b/deny-tor_ips_v4.conf
@@ -769,6 +769,7 @@ deny 23.94.211.25;
 deny 24.240.72.170;
 deny 2.56.10.36;
 deny 2.58.56.220;
+deny 2.58.56.35;
 deny 2.58.56.43;
 deny 27.255.75.198;
 deny 31.129.22.65;
@@ -1031,6 +1032,7 @@ deny 94.232.43.221;
 deny 94.72.103.33;
 deny 94.72.98.8;
 deny 94.75.225.81;
+deny 95.116.121.207;
 deny 95.128.43.164;
 deny 95.142.161.63;
 deny 95.143.193.125;
