--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -888,6 +888,7 @@ set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
 set_real_ip_from 2.58.56.220;
+set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -1135,6 +1136,7 @@ set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:61c0::20;
 set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
+set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:4140:6c6c::2;
@@ -1387,6 +1389,7 @@ set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
+set_real_ip_from 2a12:a800:1:1:2:58:56:35;
 set_real_ip_from 2a12:a800:1:1:2:58:56:43;
 set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
@@ -1693,6 +1696,7 @@ set_real_ip_from 94.232.43.221;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.98.8;
 set_real_ip_from 94.75.225.81;
+set_real_ip_from 95.116.121.207;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
