--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -769,6 +769,7 @@ set_real_ip_from 23.94.211.25;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
 set_real_ip_from 2.58.56.220;
+set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 31.129.22.65;
@@ -1031,6 +1032,7 @@ set_real_ip_from 94.232.43.221;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.98.8;
 set_real_ip_from 94.75.225.81;
+set_real_ip_from 95.116.121.207;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
