Update lists at 20241222-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -192,7 +192,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.113.53;
 allow 176.97.114.202;
-allow 177.149.140.60;
+allow 177.149.132.172;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -267,6 +267,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -871,6 +872,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:8901::f03c:95ff:fe89:4a88;
@@ -884,6 +886,7 @@ allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.35;
+allow 2.58.56.43;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -892,6 +895,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1350,6 +1354,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1379,6 +1384,7 @@ allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:35;
+allow 2a12:a800:1:1:2:58:56:43;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
@@ -1658,6 +1664,7 @@ allow 91.92.109.43;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
+allow 93.113.25.189;
 allow 93.123.12.112;
 allow 93.95.228.125;
 allow 93.95.228.205;
@@ -1673,6 +1680,8 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.116.81;
 allow 94.16.121.91;
+allow 94.177.106.236;
+allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.230.208.147;
 allow 94.230.208.148;
