Update lists at 20241223-1200

--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -41,7 +41,6 @@ set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.113;
 set_real_ip_from 107.189.1.160;
-set_real_ip_from 107.189.1.167;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.12.3;
 set_real_ip_from 107.189.12.88;
@@ -221,6 +220,7 @@ set_real_ip_from 179.43.167.198;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 18.227.140.150;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -268,6 +268,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
@@ -832,7 +833,6 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
-set_real_ip_from 217.64.151.73;
 set_real_ip_from 217.79.189.239;
 set_real_ip_from 23.129.64.171;
 set_real_ip_from 23.129.64.172;
@@ -849,7 +849,6 @@ set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
-set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -891,6 +890,7 @@ set_real_ip_from 2.56.10.36;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
+set_real_ip_from 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1008,7 +1008,6 @@ set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
-set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
@@ -1108,6 +1107,7 @@ set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
+set_real_ip_from 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1133,6 +1133,7 @@ set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:61c0::20;
+set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
@@ -1357,6 +1358,7 @@ set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
+set_real_ip_from 2a0f:9400:7e11:8e09::1;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
 set_real_ip_from 2a0f:df00:0:255::196;
@@ -1443,6 +1445,7 @@ set_real_ip_from 37.187.74.97;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
+set_real_ip_from 3.72.85.23;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.134.148.79;
@@ -1497,6 +1500,7 @@ set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
+set_real_ip_from 45.66.35.21;
 set_real_ip_from 45.66.35.22;
 set_real_ip_from 45.66.35.35;
 set_real_ip_from 45.78.44.215;
@@ -1632,7 +1636,6 @@ set_real_ip_from 87.118.122.51;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
-set_real_ip_from 88.80.26.4;
 set_real_ip_from 89.147.108.228;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
@@ -1664,6 +1667,7 @@ set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
 set_real_ip_from 92.246.84.133;
+set_real_ip_from 93.113.25.189;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
@@ -1679,6 +1683,8 @@ set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
+set_real_ip_from 94.177.106.236;
+set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
