--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -41,7 +41,6 @@ allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
-allow 107.189.1.167;
 allow 107.189.1.175;
 allow 107.189.12.3;
 allow 107.189.12.88;
@@ -221,6 +220,7 @@ allow 179.43.167.198;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.227.140.150;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -268,6 +268,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
@@ -832,7 +833,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.64.151.73;
 allow 217.79.189.239;
 allow 23.129.64.171;
 allow 23.129.64.172;
@@ -849,7 +849,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -891,6 +890,7 @@ allow 2.56.10.36;
 allow 2.58.56.220;
 allow 2.58.56.35;
 allow 2.58.56.43;
+allow 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1008,7 +1008,6 @@ allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
-allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -1108,6 +1107,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1133,6 +1133,7 @@ allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
+allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
@@ -1357,6 +1358,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1443,6 +1445,7 @@ allow 37.187.74.97;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
+allow 3.72.85.23;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.134.148.79;
@@ -1497,6 +1500,7 @@ allow 45.61.186.203;
 allow 45.61.187.200;
 allow 45.66.35.10;
 allow 45.66.35.20;
+allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
 allow 45.78.44.215;
@@ -1632,7 +1636,6 @@ allow 87.118.122.51;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
-allow 88.80.26.4;
 allow 89.147.108.228;
 allow 89.147.108.90;
 allow 89.147.110.118;
@@ -1664,6 +1667,7 @@ allow 91.92.109.43;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
+allow 93.113.25.189;
 allow 93.123.12.112;
 allow 93.95.228.125;
 allow 93.95.228.205;
@@ -1679,6 +1683,8 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.116.81;
 allow 94.16.121.91;
+allow 94.177.106.236;
+allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.230.208.147;
 allow 94.230.208.148;
