--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -118,6 +118,7 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
+allow 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -234,7 +235,6 @@ allow 2620:18c:0:192::173;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
-allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
@@ -334,6 +334,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -359,6 +360,7 @@ allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
+allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
@@ -583,6 +585,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
