--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -41,7 +41,6 @@ deny 107.189.10.175;
 deny 107.189.11.111;
 deny 107.189.11.113;
 deny 107.189.1.160;
-deny 107.189.1.167;
 deny 107.189.1.175;
 deny 107.189.12.3;
 deny 107.189.12.88;
@@ -221,6 +220,7 @@ deny 179.43.167.198;
 deny 179.43.182.232;
 deny 179.43.182.58;
 deny 180.150.226.99;
+deny 18.227.140.150;
 deny 185.100.85.132;
 deny 185.100.85.22;
 deny 185.100.85.23;
@@ -268,6 +268,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.177.151.34;
@@ -832,7 +833,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.64.151.73;
 deny 217.79.189.239;
 deny 23.129.64.171;
 deny 23.129.64.172;
@@ -849,7 +849,6 @@ deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
-deny 23.154.177.14;
 deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
@@ -891,6 +890,7 @@ deny 2.56.10.36;
 deny 2.58.56.220;
 deny 2.58.56.35;
 deny 2.58.56.43;
+deny 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1008,7 +1008,6 @@ deny 2620:95:4007::111;
 deny 27.255.75.198;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
-deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
@@ -1108,6 +1107,7 @@ deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
+deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
@@ -1133,6 +1133,7 @@ deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
 deny 2a09:61c0::20;
+deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
@@ -1357,6 +1358,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:8e09::1;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
@@ -1443,6 +1445,7 @@ deny 37.187.74.97;
 deny 37.228.129.128;
 deny 37.228.129.5;
 deny 37.228.129.63;
+deny 3.72.85.23;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.134.148.79;
@@ -1497,6 +1500,7 @@ deny 45.61.186.203;
 deny 45.61.187.200;
 deny 45.66.35.10;
 deny 45.66.35.20;
+deny 45.66.35.21;
 deny 45.66.35.22;
 deny 45.66.35.35;
 deny 45.78.44.215;
@@ -1632,7 +1636,6 @@ deny 87.118.122.51;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
-deny 88.80.26.4;
 deny 89.147.108.228;
 deny 89.147.108.90;
 deny 89.147.110.118;
@@ -1664,6 +1667,7 @@ deny 91.92.109.43;
 deny 92.243.24.163;
 deny 92.246.138.145;
 deny 92.246.84.133;
+deny 93.113.25.189;
 deny 93.123.12.112;
 deny 93.95.228.125;
 deny 93.95.228.205;
@@ -1679,6 +1683,8 @@ deny 94.142.241.194;
 deny 94.142.244.16;
 deny 94.16.116.81;
 deny 94.16.121.91;
+deny 94.177.106.236;
+deny 94.177.106.54;
 deny 94.228.163.25;
 deny 94.230.208.147;
 deny 94.230.208.148;
